cmake_minimum_required (VERSION 2.6)

INCLUDE_DIRECTORIES(TP_2301_HaloOpticsMountTest)
INCLUDE_DIRECTORIES(TP_2302_HaloOpticsMountTest_rev2)
INCLUDE_DIRECTORIES(TP_2303_HaloDockingPortTest)
INCLUDE_DIRECTORIES(TP_2304_HaloOpticsAndXSCamTest)

ADD_SUBDIRECTORY(TP_2301_HaloOpticsMountTest)
ADD_SUBDIRECTORY(TP_2302_HaloOpticsMountTest_rev2)
ADD_SUBDIRECTORY(TP_2303_HaloDockingPortTest)
ADD_SUBDIRECTORY(TP_2304_HaloOpticsAndXSCamTest)
